Site Selector: Fix for hover colors on site badges to ensure adequate contrast. (#36515)

--- a/client/components/site-selector/style.scss
+++ b/client/components/site-selector/style.scss
@@ -76,7 +76,7 @@
 	cursor: pointer;
 
 	.site__badge {
-		color: var( --color-sidebar-menu-hover-text );
+		color: var( --color-sidebar-text );
 	}
 
 	.site__title,
